Add profile image and images folder structure

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "name": "Pratik Kumar Kale",
     "title": "Lead Data Analytics Engineer | BI & Data Strategy Specialist",
     "description": "I help businesses make smarter, data-driven decisions by transforming complex data into actionable insights using modern BI tools and cloud technologies.",
-    "email": "pratik.kale@itversity.com",
+    "email": "kpratik64@gmail.com",
     "phone": "+91 8919052874",
     "location": "Hyderabad, Telangana, India",
     "profileImage": "images/profile.jpg"
