--- a/config.json
+++ b/config.json
@@ -2,16 +2,16 @@
   "personal": {
     "name": "Pratik Kumar Kale",
     "title": "AI Solutions Engineer | Strategy - Data & Analytics",
-    "description": "I help product, data, and analytics teams deliver AI‑powered outcomes — reliable platforms, governed data, and fast, useful insights. I set clear standards, remove friction, and make results measurable.",
+    "description": "I help product, data, and analytics teams deliver AI‑powered outcomes — reliable platforms, governed data, and fast, useful insights. I set clear standards, remove friction, and stay hands‑on when it matters (prototyping RAG, shaping SQL models, performance debugging).",
     "email": "kpratik64@gmail.com",
     "phone": "+91 8919052874",
     "location": "Hyderabad, Telangana, India",
     "profileImage": "images/profile.jpg"
   },
   "about": {
-    "intro": "AI‑led data and analytics strategy that enables teams to move faster with reliability and governance.",
-    "story": "I enable teams to design and ship end‑to‑end data and analytics solutions: ingestion, modeling, semantic layers, and selective LLM/RAG. I translate business goals into platform choices and operating standards so outcomes are measurable, governed, and performant.",
-    "approach": "How I lead: clarify outcomes and KPIs; establish lightweight standards (data contracts, metrics/semantic layer, cost & performance guardrails); pair with engineers and analysts; coach and document just enough; hand over maintainable systems. Cloud: OCI, AWS, Azure.",
+    "intro": "AI‑led data and analytics strategy that enables teams to move faster — with practical guardrails, measurable outcomes, and sleeves‑rolled‑up execution.",
+    "story": "I work with teams to design and ship end‑to‑end data and analytics solutions: ingestion, modeling, semantic layers, and selective LLM/RAG. I translate business goals into platform choices and operating standards — and I contribute directly where impact is highest (reference implementations, reviews, and performance fixes).",
+    "approach": "Balanced leadership: clarify outcomes and KPIs; co‑create lightweight standards (data contracts, metrics/semantic layer, cost/perf guardrails); build reference patterns; pair‑program and review; coach analysts and engineers; document the essentials; hand over maintainable systems. Cloud: OCI, AWS, Azure.",
     "skills": [
       "AI/RAG Patterns",
       "Semantic Layers & Metrics",
