Content: revert hero description to concise previous version

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "personal": {
     "name": "Pratik Kumar Kale",
     "title": "AI Solutions Engineer | Strategy - Data & Analytics",
-    "description": "I collaborate, coach, and guide teams across the org to ship AI‑driven analytics — reliable platforms, governed data, fast insights.",
+    "description": "I help teams ship AI‑driven analytics — reliable platforms, governed data, fast insights.",
     "email": "kpratik64@gmail.com",
     "phone": "+91 8919052874",
     "location": "Hyderabad, Telangana, India",
