--- a/config.json
+++ b/config.json
@@ -10,8 +10,8 @@
   },
   "about": {
     "intro": "Better decisions at scale — AI + data, human teams in the loop.",
-    "story": "Translate goals into platform choices and operating standards; contribute where impact is highest.",
-    "approach": "Outcomes first, lean standards, reference builds, coaching and reviews, maintainable handovers.",
+    "story": "Partner across product, data, and analytics to deliver ingestion → models → metrics/semantic layer → insights, with selective LLM/RAG. Translate goals into platform choices and operating standards, then lead reference builds and performance fixes where impact is highest.",
+    "approach": "Outcomes first; co‑create lean standards (data contracts, metrics layer, cost/perf guardrails); build reference implementations; pair and review with engineers and analysts; coach and document essentials; hand over maintainable systems.",
     "skills": [
       "AI/RAG Patterns",
       "Semantic Layers & Metrics",
