--- a/.github/workflows/resume.yaml
+++ b/.github/workflows/resume.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    if: ${{ hashFiles('resume/resume.md') != '' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
