refactor(structure): move assets to assets/{css,js,images} and update paths

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "email": "kpratik64@gmail.com",
     "phone": "+91 8919052874",
     "location": "Hyderabad, Telangana, India",
-    "profileImage": "images/profile.jpg"
+    "profileImage": "assets/images/profile.jpg"
   },
   "about": {
     "intro": "Better decisions at scale — AI and data, with human teams in the loop.",
