feat: update all URLs to point to organization repository (kalepratik)

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kpratik64/my-portfolio.git"
+    "url": "https://github.com/kalepratik/my-portfolio.git"
   },
   "bugs": {
-    "url": "https://github.com/kpratik64/my-portfolio/issues"
+    "url": "https://github.com/kalepratik/my-portfolio/issues"
   },
-  "homepage": "https://kpratik64.github.io/my-portfolio/"
+      "homepage": "https://kalepratik.github.io/my-portfolio/"
 }
