chore: complete domain migration to portfolio.kalepratik.in

--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
   "bugs": {
     "url": "https://github.com/kalepratik/my-portfolio/issues"
   },
-      "homepage": "https://kalepratik.github.io/my-portfolio/"
+      "homepage": "https://portfolio.kalepratik.in/"
 }
